--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,4 +26,30 @@
         <item name="android:layout_margin">@dimen/fab_margin_10</item>
     </style>
 
+    <style name="StyleSearchView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:iconifiedByDefault">true</item>
+        <item name="android:queryHint">请输入搜索内容</item>
+    </style>
+
+    <style name="StyleListTextView">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">@dimen/list_item_height_40</item>
+        <item name="android:layout_alignParentLeft">true</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:textSize">@dimen/font_18</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_marginLeft">@dimen/list_item_margin_5</item>
+        <item name="android:layout_marginStart">@dimen/list_item_margin_5</item>
+    </style>
+
+    <style name="StyleListRightItem">
+        <item name="android:layout_width">@dimen/list_item_width_25</item>
+        <item name="android:layout_height">@dimen/list_item_height_40</item>
+        <item name="android:layout_alignParentEnd">true</item>
+        <item name="android:layout_marginTop">@dimen/list_item_margin_top_2</item>
+        <item name="android:layout_marginRight">@dimen/list_item_margin_5</item>
+    </style>
 </resources>
