--- a/app/src/main/res/layout/item_song_list.xml
+++ b/app/src/main/res/layout/item_song_list.xml
@@ -8,7 +8,6 @@
         android:id="@+id/tv_item_song_name"
         style="@style/StyleTextView"
         android:text="@string/undefined"
-        android:textColor="@android:color/white"
         android:textSize="22sp"
         app:layout_constraintStart_toStartOf="@+id/divider_item"
         app:layout_constraintTop_toTopOf="parent" />
@@ -17,10 +16,19 @@
         android:id="@+id/tv_item_song_artist"
         style="@style/StyleTextView"
         android:text="@string/undefined"
-        android:textColor="@android:color/white"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@+id/divider_item"
         app:layout_constraintTop_toBottomOf="@+id/tv_item_song_name" />
+
+    <CheckBox
+        android:id="@+id/chb_item_song_select"
+        style="@style/StyleListRightItem"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/empty"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/divider_item"
