--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="colorDark">#0B2848</color>
     <color name="colorDarkBlack">#09274B</color>
     <color name="colorDarkBlue">#1E95BD</color>
+    <color name="colorGrey">#293e56</color>
     <color name="empty">#00000000</color>
 
 </resources>
