--- a/app/src/main/res/layout/fragment_control.xml
+++ b/app/src/main/res/layout/fragment_control.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="110dp"
     android:background="@color/colorDark"
-    tools:context=".ControlFragment">
+    tools:context=".ui.ControlFragment">
 
 
     <TextView
