--- a/app/src/main/res/layout/item_song_list.xml
+++ b/app/src/main/res/layout/item_song_list.xml
@@ -2,7 +2,8 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/colorDark">
 
     <TextView
         android:id="@+id/tv_item_song_name"
@@ -15,9 +16,10 @@
     <TextView
         android:id="@+id/tv_item_song_artist"
         style="@style/StyleTextView"
+        android:layout_marginStart="0dp"
         android:text="@string/undefined"
         android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="@+id/divider_item"
+        app:layout_constraintStart_toStartOf="@+id/tv_item_song_name"
         app:layout_constraintTop_toBottomOf="@+id/tv_item_song_name" />
 
     <CheckBox
