--- a/app/src/main/res/layout/fragment_control.xml
+++ b/app/src/main/res/layout/fragment_control.xml
@@ -61,6 +61,9 @@
         android:id="@+id/progress_song"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         app:cpb_background_progressbar_color="@color/colorWhite"
         app:cpb_background_progressbar_width="8dp"
         app:cpb_progressbar_color="@color/colorDarkBlue"
