--- a/app/src/main/res/layout/item_song_list.xml
+++ b/app/src/main/res/layout/item_song_list.xml
@@ -3,42 +3,68 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorDark">
-
-    <TextView
-        android:id="@+id/tv_item_song_name"
-        style="@style/StyleTextView"
-        android:text="@string/undefined"
-        android:textSize="22sp"
-        app:layout_constraintStart_toStartOf="@+id/divider_item"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_item_song_artist"
-        style="@style/StyleTextView"
-        android:layout_marginStart="0dp"
-        android:text="@string/undefined"
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="@+id/tv_item_song_name"
-        app:layout_constraintTop_toBottomOf="@+id/tv_item_song_name" />
+    android:background="@color/colorGrey">
 
     <CheckBox
         android:id="@+id/chb_item_song_select"
         style="@style/StyleListRightItem"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="@string/empty"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <View
-        android:id="@+id/divider_item"
-        android:layout_width="2dp"
-        android:layout_height="60dp"
-        android:background="@color/empty"
+    <RelativeLayout
+        android:id="@+id/layout_song_begin"
+        android:layout_width="40dp"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <View
+            android:id="@+id/divider_item"
+            android:layout_width="2dp"
+            android:layout_height="60dp"
+            android:background="@color/empty"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_item_song_num"
+            style="@style/StyleTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:text="@string/undefined"
+            android:textSize="13sp" />
+    </RelativeLayout>
+
+
+    <TextView
+        android:id="@+id/tv_item_song_name"
+        style="@style/StyleTextView"
+        android:layout_gravity="start"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/undefined"
+        android:textSize="17sp"
+        app:layout_constraintStart_toEndOf="@+id/layout_song_begin"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_item_song_artist"
+        style="@style/StyleTextView"
+        android:layout_gravity="start"
+        android:layout_marginStart="0dp"
+        android:text="@string/undefined"
+        android:textColor="@color/colorGray"
+        android:textSize="12sp"
+        app:layout_constraintStart_toStartOf="@+id/tv_item_song_name"
+        app:layout_constraintTop_toBottomOf="@+id/tv_item_song_name" />
 
 </android.support.constraint.ConstraintLayout>
