--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,7 +32,7 @@
         <item name="android:iconifiedByDefault">true</item>
         <item name="android:background">@color/colorWhite</item>
         <item name="android:textColor">@android:color/white</item>
-        <item name="android:queryHint">请输入搜索内容</item>
+        <item name="android:queryHint">搜索</item>
     </style>
 
     <style name="StyleListTextView">
