--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,15 @@
                 android:src="@drawable/up_arrow"
                 app:backgroundTint="@color/colorWhite"
                 app:fabSize="mini"
+                app:layout_constraintBottom_toTopOf="@+id/fab_song_locate"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab_song_locate"
+                style="@style/StyleFab"
+                android:src="@drawable/water_locate"
+                app:backgroundTint="@color/colorWhite"
+                app:fabSize="mini"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
         </android.support.constraint.ConstraintLayout>
