--- a/app/src/main/res/layout/content_song_header.xml
+++ b/app/src/main/res/layout/content_song_header.xml
@@ -5,6 +5,18 @@
     android:layout_height="wrap_content"
     android:background="@color/colorGrey">
 
+
+    <TextView
+        android:id="@+id/tv_song_count_mode"
+        style="@style/StyleTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/undefined"
+        android:textSize="@dimen/sp_14"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:id="@+id/iv_header_search"
         android:layout_width="wrap_content"
@@ -26,4 +38,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/sort" />
+
 </android.support.constraint.ConstraintLayout>
