设置主窗口标题为空，优化部分代码

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorGrey"
-    tools:context=".ui.SearchActivity">
+    tools:context=".ui.MusicSearchActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_search"
