--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,4 +21,5 @@
     <dimen name="image_margin_4">4dp</dimen>
     <dimen name="image_height">100dp</dimen>
     <dimen name="image_size_32">32dp</dimen>
+    <dimen name="image_size_24">24dp</dimen>
 </resources>
