--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,7 @@
         <RelativeLayout
             android:id="@+id/layout_control"
             android:layout_width="match_parent"
-            android:layout_height="110dp"
+            android:layout_height="@dimen/control_height"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
