--- a/app/src/main/res/layout/fragment_control.xml
+++ b/app/src/main/res/layout/fragment_control.xml
@@ -4,89 +4,90 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout_control_progress"
     android:layout_width="match_parent"
-    android:layout_height="110dp"
+    android:layout_height="@dimen/control_height"
     android:background="@color/colorDark"
     tools:context=".ui.MusicControlFragment">
-
 
     <TextView
         android:id="@+id/tv_song_name"
         style="@style/StyleTextView"
+        android:layout_marginStart="0dp"
+        android:layout_marginBottom="@dimen/margin_bottom_8"
         android:text="@string/undefined"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/iv_play_pause"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tv_duration"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_artist"
-        style="@style/StyleTextView"
-        android:layout_marginTop="0dp"
-        android:text="@string/undefined"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tv_duration"
-        app:layout_constraintTop_toBottomOf="@+id/tv_song_name" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/iv_play_pre"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="@dimen/image_size_32"
+        android:layout_height="@dimen/image_size_32"
+        android:layout_marginEnd="@dimen/image_margin_32"
+        android:layout_marginBottom="@dimen/margin_bottom_8"
         android:src="@drawable/previous"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/iv_play_pause" />
 
     <ImageView
         android:id="@+id/iv_play_pause"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_width="@dimen/image_size_32"
+        android:layout_height="@dimen/image_size_32"
+        android:layout_marginBottom="@dimen/margin_bottom_8"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tv_duration"
+        app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/play" />
 
     <ImageView
         android:id="@+id/iv_play_next"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="@dimen/image_size_32"
+        android:layout_height="@dimen/image_size_32"
+        android:layout_marginStart="@dimen/image_margin_32"
+        android:layout_marginBottom="@dimen/margin_bottom_8"
         android:src="@drawable/next"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/iv_play_pause" />
 
-    <com.mikhaellopez.circularprogressbar.CircularProgressBar
-        android:id="@+id/progress_song"
-        android:layout_width="wrap_content"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/layout_progress"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        app:cpb_background_progressbar_color="@color/colorWhite"
-        app:cpb_background_progressbar_width="8dp"
-        app:cpb_progressbar_color="@color/colorDarkBlue"
-        app:cpb_progressbar_width="12dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="5dp"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/tv_progress"
-        style="@style/StyleTextView"
-        android:text="@string/undefined"
-        android:textSize="14sp"
-        app:layout_constraintStart_toEndOf="@+id/progress_song"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/tv_progress"
+            style="@style/StyleTextView"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/undefined"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tv_duration"
-        style="@style/StyleTextView"
-        android:layout_marginBottom="8dp"
-        android:text="@string/undefined"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/progress_song" />
+        <TextView
+            android:id="@+id/tv_duration"
+            style="@style/StyleTextView"
+            android:layout_marginEnd="8dp"
+            android:text="@string/undefined"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <SeekBar
+            android:id="@+id/progress_song"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:max="1000"
+            android:progress="0"
+            android:progressBackgroundTint="@color/colorWhite"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/tv_duration"
+            app:layout_constraintStart_toEndOf="@+id/tv_progress"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
