--- a/app/src/main/res/layout/item_song_edit.xml
+++ b/app/src/main/res/layout/item_song_edit.xml
@@ -41,7 +41,7 @@
         android:layout_marginStart="0dp"
         android:text="@string/undefined"
         android:textColor="@color/colorGray"
-        android:textSize="12sp"
+        android:textSize="@dimen/font_12"
         app:layout_constraintStart_toStartOf="@+id/tv_edit_item_song_name"
         app:layout_constraintTop_toBottomOf="@+id/tv_edit_item_song_name" />
 
