--- a/app/src/main/res/layout/notify_control.xml
+++ b/app/src/main/res/layout/notify_control.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layout_notify_control"
     android:layout_width="match_parent"
-    android:layout_height="90dp"
+    android:layout_height="75dp"
     android:background="@color/colorDark">
 
     <RelativeLayout
@@ -19,22 +19,13 @@
             android:text="@string/undefined"
             android:textSize="14sp" />
 
-        <TextView
-            android:id="@+id/tv_notify_artist"
-            style="@style/StyleTextView"
-            android:layout_below="@+id/tv_notify_song_name"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="2dp"
-            android:text="@string/undefined"
-            android:textSize="12sp" />
-
         <ImageView
             android:id="@+id/iv_notify_play_pre"
             android:layout_width="@dimen/image_size_32"
             android:layout_height="@dimen/image_size_32"
             android:layout_alignParentBottom="true"
-            android:layout_marginEnd="40dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginEnd="@dimen/image_margin_32"
+            android:layout_marginBottom="@dimen/margin_bottom_8"
             android:layout_toStartOf="@+id/iv_notify_play_pause"
             android:src="@drawable/previous" />
 
@@ -44,7 +35,7 @@
             android:layout_height="@dimen/image_size_32"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="@dimen/margin_bottom_8"
             app:srcCompat="@drawable/play" />
 
         <ImageView
@@ -52,8 +43,8 @@
             android:layout_width="@dimen/image_size_32"
             android:layout_height="@dimen/image_size_32"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="40dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginStart="@dimen/image_margin_32"
+            android:layout_marginBottom="@dimen/margin_bottom_8"
             android:layout_toEndOf="@+id/iv_notify_play_pause"
             android:src="@drawable/next" />
 
