--- a/app/src/main/res/layout/content_song_header.xml
+++ b/app/src/main/res/layout/content_song_header.xml
@@ -32,8 +32,18 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/iv_header_edit"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/sort_white" />
+
+    <ImageView
+        android:id="@+id/iv_header_edit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/edit" />
 
 </android.support.constraint.ConstraintLayout>
