--- a/app/src/main/res/layout/fragment_control.xml
+++ b/app/src/main/res/layout/fragment_control.xml
@@ -90,4 +90,14 @@
 
     </android.support.constraint.ConstraintLayout>
 
+    <ImageView
+        android:id="@+id/iv_favorite"
+        android:layout_width="@dimen/image_size_32"
+        android:layout_height="@dimen/image_size_32"
+        android:layout_marginEnd="@dimen/image_margin_32"
+        android:layout_marginBottom="@dimen/margin_bottom_8"
+        android:src="@drawable/favorite_white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/iv_play_pre" />
+
 </android.support.constraint.ConstraintLayout>
