--- a/app/src/main/res/layout/item_song_check.xml
+++ b/app/src/main/res/layout/item_song_check.xml
@@ -7,11 +7,10 @@
 
     <include layout="@layout/item_song_info" />
 
-    <ImageView
-        android:id="@+id/iv_edit_del"
+    <CheckBox
+        android:id="@+id/chb_item_song_select"
         style="@style/StyleListRightItem"
-        android:layout_marginEnd="8dp"
-        android:src="@android:drawable/ic_delete"
+        android:text="@string/empty"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
