--- a/app/src/main/res/layout/item_song_local.xml
+++ b/app/src/main/res/layout/item_song_local.xml
@@ -5,6 +5,8 @@
     android:layout_height="wrap_content"
     android:background="@color/colorGrey">
 
+    <!--<include layout="@layout/item_song_info" />-->
+
     <RelativeLayout
         android:id="@+id/layout_song_num"
         android:layout_width="40dp"
@@ -53,13 +55,5 @@
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@+id/tv_item_song_name"
         app:layout_constraintTop_toBottomOf="@+id/tv_item_song_name" />
-
-    <CheckBox
-        android:id="@+id/chb_item_song_select"
-        style="@style/StyleListRightItem"
-        android:text="@string/empty"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
