--- a/app/src/main/res/layout/fragment_control.xml
+++ b/app/src/main/res/layout/fragment_control.xml
@@ -1,103 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout_control_progress"
     android:layout_width="match_parent"
     android:layout_height="@dimen/control_height"
     android:background="@color/colorDark"
+    android:orientation="vertical"
     tools:context=".ui.MusicControlFragment">
 
-    <TextView
-        android:id="@+id/tv_song_name"
-        style="@style/StyleTextView"
-        android:layout_marginStart="0dp"
-        android:layout_marginBottom="@dimen/margin_bottom_8"
-        android:text="@string/undefined"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/iv_play_pause"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+    <include layout="@layout/layout_progress" />
 
-    <ImageView
-        android:id="@+id/iv_play_pre"
-        android:layout_width="@dimen/image_size_32"
-        android:layout_height="@dimen/image_size_32"
-        android:layout_marginEnd="@dimen/image_margin_32"
-        android:layout_marginBottom="@dimen/margin_bottom_8"
-        android:src="@drawable/previous"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/iv_play_pause" />
-
-    <ImageView
-        android:id="@+id/iv_play_pause"
-        android:layout_width="@dimen/image_size_32"
-        android:layout_height="@dimen/image_size_32"
-        android:layout_marginBottom="@dimen/margin_bottom_8"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/play" />
-
-    <ImageView
-        android:id="@+id/iv_play_next"
-        android:layout_width="@dimen/image_size_32"
-        android:layout_height="@dimen/image_size_32"
-        android:layout_marginStart="@dimen/image_margin_32"
-        android:layout_marginBottom="@dimen/margin_bottom_8"
-        android:src="@drawable/next"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/iv_play_pause" />
-
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/layout_progress"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
-        <TextView
-            android:id="@+id/tv_progress"
-            style="@style/StyleTextView"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/undefined"
-            android:textSize="14sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        <include layout="@layout/layout_song_control" />
+    </RelativeLayout>
 
-        <TextView
-            android:id="@+id/tv_duration"
-            style="@style/StyleTextView"
-            android:layout_marginEnd="8dp"
-            android:text="@string/undefined"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
-
-        <SeekBar
-            android:id="@+id/progress_song"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:max="1000"
-            android:progress="0"
-            android:progressBackgroundTint="@color/colorWhite"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/tv_duration"
-            app:layout_constraintStart_toEndOf="@+id/tv_progress"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </android.support.constraint.ConstraintLayout>
-
-    <ImageView
-        android:id="@+id/iv_favorite"
-        android:layout_width="@dimen/image_size_32"
-        android:layout_height="@dimen/image_size_32"
-        android:layout_marginEnd="@dimen/image_margin_32"
-        android:layout_marginBottom="@dimen/margin_bottom_8"
-        android:src="@drawable/favorite_white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/iv_play_pre" />
-
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
