--- a/app/src/main/res/layout/item_song_local.xml
+++ b/app/src/main/res/layout/item_song_local.xml
@@ -1,9 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorGrey">
 
     <include layout="@layout/item_song_info" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="@dimen/image_size_24"
+        android:layout_height="@dimen/image_size_24"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/more" />
 
 </android.support.constraint.ConstraintLayout>
