--- a/app/src/main/res/layout/item_song_local.xml
+++ b/app/src/main/res/layout/item_song_local.xml
@@ -8,7 +8,7 @@
     <include layout="@layout/item_song_info" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/iv_song_more"
         android:layout_width="@dimen/image_size_24"
         android:layout_height="@dimen/image_size_24"
         android:layout_marginTop="8dp"
