--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
-        android:id="@+id/action_add_song"
-        android:title="添加歌曲"
+        android:id="@+id/action_song_add"
+        android:orderInCategory="1"
+        android:title="@string/menu_song_add"
         app:showAsAction="never" />
 
 </menu>
