--- a/app/src/main/res/layout/list_divider.xml
+++ b/app/src/main/res/layout/list_divider.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <View xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/divider3"
+    android:id="@+id/divider"
     android:layout_width="match_parent"
     android:layout_height="1dp"
-    android:layout_alignParentTop="true"
-    android:layout_marginTop="42dp"
+    android:layout_alignParentBottom="true"
+    android:layout_marginBottom="2dp"
     android:background="?android:attr/listDivider" />
