暂时开发部分天气功能

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,6 +26,8 @@
     <dimen name="font_12">12sp</dimen>
     <dimen name="control_height">100dp</dimen>
     <dimen name="image_margin_32">32dp</dimen>
+    <dimen name="image_margin_16">16dp</dimen>
     <dimen name="margin_bottom_8">8dp</dimen>
     <dimen name="song_name_space">24dp</dimen>
+    <dimen name="notify_height">88dp</dimen>
 </resources>
