--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,4 +30,5 @@
     <dimen name="margin_bottom_8">8dp</dimen>
     <dimen name="song_name_space">24dp</dimen>
     <dimen name="notify_height">88dp</dimen>
+    <dimen name="layout_song_num_width_40">40dp</dimen>
 </resources>
