--- a/app/src/main/res/layout/fragment_song_list.xml
+++ b/app/src/main/res/layout/fragment_song_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorGrey"
-    tools:context=".ui.PlayListFragment">
+    tools:context=".view.ui.PlayListFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_song"
