--- a/app/src/main/res/layout/activity_song_edit.xml
+++ b/app/src/main/res/layout/activity_song_edit.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorGrey"
-    tools:context=".ui.SongEditActivity">
+    tools:context=".view.ui.SongEditActivity">
 
     <SearchView
         android:id="@+id/sv_edit"
