--- a/app/src/main/res/layout/activity_song_picker.xml
+++ b/app/src/main/res/layout/activity_song_picker.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorGrey"
-    tools:context=".ui.SongPickerActivity">
+    tools:context=".view.ui.SongPickerActivity">
 
     <include layout="@layout/content_song_picker" />
 
