--- a/app/src/main/res/layout/content_play_list_header.xml
+++ b/app/src/main/res/layout/content_play_list_header.xml
@@ -11,7 +11,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginBottom="4dp"
         android:text="@string/undefined"
-        android:textSize="@dimen/sp_14"
+        android:textSize="@dimen/font_14"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
