--- a/app/src/main/res/layout/content_song_list_header.xml
+++ b/app/src/main/res/layout/content_song_list_header.xml
@@ -20,7 +20,7 @@
         android:layout_marginStart="14dp"
         android:layout_marginTop="0dp"
         android:text="@string/undefined"
-        android:textSize="@dimen/sp_14"
+        android:textSize="@dimen/font_14"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/iv_song_header_play_all"
         app:layout_constraintTop_toTopOf="parent" />
