--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,6 +11,8 @@
     <dimen name="font_25">25sp</dimen>
     <dimen name="font_45">45sp</dimen>
     <dimen name="font_18">18sp</dimen>
+    <dimen name="font_16">16sp</dimen>
+    <dimen name="font_14">14sp</dimen>
     <dimen name="fab_margin_10">10dp</dimen>
     <dimen name="song_margin_top_50">50dp</dimen>
     <dimen name="switch_height_25">25dp</dimen>
